--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,14 @@
 <resources>
     <string name="app_name">JetApp</string>
 
-    <string name="happy_birthday_text">Happy Birthday to Me!</string>
-    <string name="signature_text">- Myself</string>
+    <string name="select_lemon">Tap the lemon tree to select a lemon</string>
+    <string name="lemon_squeeze">Keep tapping the lemon to squeeze it</string>
+    <string name="tap_drink">Tap the lemonade to drink it</string>
+    <string name="restart_message">Tap the empty glass to start again</string>
 
-    <string name="roll">Roll</string>
+    <string name="lemon_tree">Lemon tree</string>
+    <string name="lemon">Lemon</string>
+    <string name="glass_of_lemon">Glass of lemon</string>
+    <string name="empty_glass">Empty glass</string>
+
 </resources>
